--- a/index.html
+++ b/index.html
@@ -138,32 +138,46 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <div class="row ml-2">
-                      <p><img src="img/R.png" width="50px" /> HTML</p>
-                      <span class="ml-3"
-                        ><img src="img/R.png" width="50px" /> Flutter</span
-                      >
-                      <span class="ml-3"
-                        ><img src="img/R.png" width="50px" /> Flutter</span
-                      >
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> HTML</p>
+                        </div>
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> Flutter</p>
+                        </div>
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> Flutter</p>
+                        </div>
+                      </div>
                     </div>
-                    <div class="row ml-2">
-                      <p><img src="img/R.png" width="50px" /> HTML</p>
-                      <span class="ml-3"
-                        ><img src="img/R.png" width="50px" /> Flutter</span
-                      >
-                      <span class="ml-3"
-                        ><img src="img/R.png" width="50px" /> Flutter</span
-                      >
+
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> HTML</p>
+                        </div>
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> Flutter</p>
+                        </div>
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> Flutter</p>
+                        </div>
+                      </div>
                     </div>
-                    <div class="row ml-2">
-                      <p><img src="img/R.png" width="50px" /> HTML</p>
-                      <span class="ml-3"
-                        ><img src="img/R.png" width="50px" /> Flutter</span
-                      >
-                      <span class="ml-3"
-                        ><img src="img/R.png" width="50px" /> Flutter</span
-                      >
+
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> HTML</p>
+                        </div>
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> Flutter</p>
+                        </div>
+                        <div class="col-12 col-sm-4">
+                          <p><img src="img/R.png" width="50px" /> Flutter</p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -206,35 +220,228 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">Portfolio</h3>
-              <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              </p>
+              <p class="subtitle-a">ผลงาน</p>
               <div class="line-mf"></div>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="img/work-1.jpg" data-lightbox="gallery-mf">
-                <div class="work-img">
-                  <img src="img/work-1.jpg" alt="" class="img-fluid" />
+        <div class="col">
+          <div class="row-md-4">
+            <div id="work-carousel" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li
+                  data-target="#work-carousel"
+                  data-slide-to="0"
+                  class="active"
+                ></li>
+                <li data-target="#work-carousel" data-slide-to="1"></li>
+                <li data-target="#work-carousel" data-slide-to="2"></li>
+              </ol>
+
+              <!-- Slides -->
+              <div class="carousel-inner mx-auto">
+                <div class="carousel-item active ml-2">
+                  <img src="img/work-1.jpg" alt="" class="img-fluid ml-5" />
                 </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">Game Developer</h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Rogelike3D</span> /
-                        <span class="w-date">June</span>
-                      </div>
-                    </div>
-                  </div>
+                <div class="carousel-item ml-2">
+                  <img src="img/work-2.jpg" alt="" class="img-fluid ml-5" />
                 </div>
+                <div class="carousel-item ml-2">
+                  <img src="img/work-3.jpg" alt="" class="img-fluid ml-5" />
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a
+                class="carousel-control-prev"
+                href="#work-carousel"
+                role="button"
+                data-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#work-carousel"
+                role="button"
+                data-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Next</span>
               </a>
             </div>
+            <br />
+            <div class="work-content ml-5 mr-5">
+              <div
+                class="row bg-light border-5 rounded-lg rounded-top rounded-bottom mx-auto shadow-lg"
+              >
+                <div class="col-sm-10">
+                  <br />
+                  <h2 class="w-title">Flutter Mobile Application</h2>
+                  <h3>สร้างหน้า uI</h3>
+                  <div class="w-more">
+                    <span class="w-ctegory">Web Design</span> /
+                    <span class="w-date">18 Sep. 2018</span>
+                  </div>
+                  <br />
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-md-4">
+          <hr />
+          <!-- อันที่ 2 -->
+          <div class="row-md-4">
+            <div id="work-carousel" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li
+                  data-target="#work-carousel"
+                  data-slide-to="0"
+                  class="active"
+                ></li>
+                <li data-target="#work-carousel" data-slide-to="1"></li>
+                <li data-target="#work-carousel" data-slide-to="2"></li>
+              </ol>
+
+              <!-- Slides -->
+              <div class="carousel-inner mx-auto">
+                <div class="carousel-item active ml-2">
+                  <img src="img/work-1.jpg" alt="" class="img-fluid ml-5" />
+                </div>
+                <div class="carousel-item ml-2">
+                  <img src="img/work-2.jpg" alt="" class="img-fluid ml-5" />
+                </div>
+                <div class="carousel-item ml-2">
+                  <img src="img/work-3.jpg" alt="" class="img-fluid ml-5" />
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a
+                class="carousel-control-prev"
+                href="#work-carousel"
+                role="button"
+                data-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#work-carousel"
+                role="button"
+                data-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <br />
+            <div class="work-content ml-5 mr-5">
+              <div
+                class="row bg-light border-5 rounded-lg rounded-top rounded-bottom mx-auto shadow-lg"
+              >
+                <div class="col-sm-10">
+                  <br />
+                  <h2 class="w-title">Flutter Mobile Application</h2>
+                  <h3>สร้างหน้า uI</h3>
+                  <div class="w-more">
+                    <span class="w-ctegory">Web Design</span> /
+                    <span class="w-date">18 Sep. 2018</span>
+                  </div>
+                  <br />
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <!-- อันที่3 -->
+          <div class="row-md-4">
+            <div id="work-carousel" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li
+                  data-target="#work-carousel"
+                  data-slide-to="0"
+                  class="active"
+                ></li>
+                <li data-target="#work-carousel" data-slide-to="1"></li>
+                <li data-target="#work-carousel" data-slide-to="2"></li>
+              </ol>
+
+              <!-- Slides -->
+              <div class="carousel-inner mx-auto">
+                <div class="carousel-item active ml-2">
+                  <img src="img/work-1.jpg" alt="" class="img-fluid ml-5" />
+                </div>
+                <div class="carousel-item ml-2">
+                  <img src="img/work-2.jpg" alt="" class="img-fluid ml-5" />
+                </div>
+                <div class="carousel-item ml-2">
+                  <img src="img/work-3.jpg" alt="" class="img-fluid ml-5" />
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a
+                class="carousel-control-prev"
+                href="#work-carousel"
+                role="button"
+                data-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#work-carousel"
+                role="button"
+                data-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <br />
+            <div class="work-content ml-5 mr-5">
+              <div
+                class="row bg-light border-5 rounded-lg rounded-top rounded-bottom mx-auto shadow-lg"
+              >
+                <div class="col-sm-10">
+                  <br />
+                  <h2 class="w-title">Flutter Mobile Application</h2>
+                  <h3>สร้างหน้า uI</h3>
+                  <div class="w-more">
+                    <span class="w-ctegory">Web Design</span> /
+                    <span class="w-date">18 Sep. 2018</span>
+                  </div>
+                  <br />
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <!-- <div class="col-md-4">
             <div class="work-box">
               <a href="img/work-2.jpg" data-lightbox="gallery-mf">
                 <div class="work-img">
@@ -243,10 +450,15 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Game Developer</h2>
+                      <h2 class="w-title">Mavrito Lana Dere</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Rogelike3D</span> /
-                        <span class="w-date">October</span>
+                        <span class="w-ctegory">Web Design</span> /
+                        <span class="w-date">18 Sep. 2018</span>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <span class="ion-ios-plus-outline"></span>
                       </div>
                     </div>
                   </div>
@@ -328,8 +540,8 @@
                 </div>
               </a>
             </div>
-          </div>
-          <div class="col-md-4">
+          </div> -->
+          <!-- <div class="col-md-4">
             <div class="work-box">
               <a href="img/work-6.jpg" data-lightbox="gallery-mf">
                 <div class="work-img">
@@ -353,7 +565,7 @@
                 </div>
               </a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
