--- a/index.html
+++ b/index.html
@@ -202,7 +202,16 @@
                       สาขา คอมพิวเตอร์ศึกษา
                     </p>
                   </div>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <a href="pdf/resume.pdf" target="_blank" class="btn btn-primary" download>ดาวน์โหลดไฟล์ Remuse</a>
                 </div>
+                
               </div>
             </div>
           </div>
