--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MyPortFolio</title>
+    <title>PattrawutDev</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
 
     <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon" />
+    
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Bootstrap CSS File -->
@@ -188,7 +188,7 @@
                       <h5 class="title-left">About me</h5>
                     </div>
                     <p class="lead">
-                      ผม นายภัทราวุธ คำมา หรือชื่อเล่นว่า โอ๊ต 
+                      ผม นายภัทราวุธ คำมา หรือเรียกผมสั้นๆว่า โอ๊ต 
                     </p>
                     <p class="lead">
                       ผมกำลังมองหา งานที่สามารถเพิ่มประสบการณ์ ในการเพิ่มความสามารถของผม ไม่ว่าจะเป็น Mobile Appication , Web 
