--- a/index.html
+++ b/index.html
@@ -376,7 +376,9 @@
                 <div class="service-content">
                   <h2 class="s-title">Mobile Application WareHouse</h2>
                   <p class="s-description text-center">
-                    มีส่วนรวมในการวางโครงสร้าง Ui และ การ Rest Api GET POST บางส่วน
+            
+                    <section> - Rest Api</section>
+                    <section> - โครง Ui Mobile</section>
                   </p>
                 </div>
               </div>
@@ -396,7 +398,10 @@
                   <h2 class="s-title">Mobile Application 
                     <section>C89</section></h2>
                   <p class="s-description text-center">
-                    มีส่วนร่วมในการช่วยออกแบบ UxUi การวางโครงสร้าง Ui และ การ Rest Api บางส่วน
+                    <section>- มีส่วนร่วมในการช่วยออกแบบ </section>
+                    <section>- โครงสร้าง Ui Application</section>
+                    <section>- Rest APi</section>
+                    
                   </p>
                 </div>
               </div>
@@ -414,7 +419,9 @@
                 <div class="service-content">
                   <h2 class="s-title">Mobile Application Onxon</h2>
                   <p class="s-description text-center">
-                    มีส่วนร่วมในการวางโครง Ui และ Rest Api บางส่วน
+                    <section>- มีส่วนร่วมในการช่วยออกแบบ </section>
+                    <section>- โครงสร้าง Ui Application</section>
+                    <section>- Rest APi</section>
                   </p>
                 </div>
               </div>
