--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@
             <li class="nav-item">
               <a class="nav-link js-scroll active" href="#home">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ">
               <a class="nav-link js-scroll" href="#about">About</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link js-scroll" href="#work">Work</a>
+              <a class="nav-link js-scroll " href="#work">Work</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link js-scroll" href="#startup">Startup</a>
+              <a class="nav-link js-scroll" href="#startup">Start   up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="#fileresume">File PDF</a>
             </li>
           </ul>
         </div>
@@ -202,8 +205,10 @@
                       สาขา คอมพิวเตอร์ศึกษา
                     </p>
                   </div>
+                 <div id="fileresume" class="row justify-content-between m-lg-3"> 
+                   <a href="pdf/resume.pdf" target="_blank" class="btn btn-primary" download>ดาวน์โหลดไฟล์ Resume</a>
+                   <a href="pdf/Transcript.pdf" target="_blank" class="btn btn-primary" download>ดาวน์โหลดไฟล์ Transcript</a></div>
                  
-                  <a href="pdf/resume.pdf" target="_blank" class="btn btn-primary" download>ดาวน์โหลดไฟล์ Resume</a>
                 </div>
                 
               </div>
