--- a/workexp.html
+++ b/workexp.html
@@ -44,6 +44,15 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 </style>
+<style>
+    @media (max-width: 767px) {
+        .dropdown-menu {
+            display: block;
+            position: static;
+            float: none;
+        }
+    }
+</style>
 
 <body id="page-top">
     <!--/ Nav Star /-->
