--- a/internship.html
+++ b/internship.html
@@ -32,12 +32,21 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 </head>
+<style>
+    @media (max-width: 767px) {
+        .dropdown-menu {
+            display: block;
+            position: static;
+            float: none;
+        }
+    }
+</style>
 
 <body id="page-top">
     <!--/ Nav Star /-->
     <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll" href="#page-top">WorkExperience</a>
+            <a class="navbar-brand js-scroll" href="#page-top">Internship</a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
                 aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
