--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
 
                 </div>
                 <div id="fileresume" class="row justify-content-between m-lg-3">
-                  <a href="pdf/resume.pdf" target="_blank" class="btn btn-primary" download>ดาวน์โหลดไฟล์ Resume</a>
+                  <a href="pdf/resumePattrawut.pdf" target="_blank" class="btn btn-primary" download>ดาวน์โหลดไฟล์
+                    Resume</a>
                   <a href="pdf/Transcript.pdf" target="_blank" class="btn btn-primary" download>ดาวน์โหลดไฟล์
                     Transcript</a>
                 </div>
