--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/myprofile.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/actor.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -125,7 +125,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img text-center">
-                      <img src="img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="" />
+                      <img src="img/resumepic.jpg" class="img-fluid rounded b-shadow-a" alt="" />
                     </div>
                   </div>
                   <div class="col-sm-8 col-md-9">
